# squirrel2-kaleido-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
sq2/: CMakeLists.txt
sq2/include/: sqextension.h  squirrel.h
sq2/sqstdlib/: CMakeLists.txt
sq2/squirrel/: CMakeLists.txt  sqbaselib.cpp  sqclosure.h  sqextension.cpp  sqfuncproto.h  sqpcheader.h  sqstate.h  sqtable.h  sqvm.h
src/: lib.rs
